<resources>
    <string name="app_name">Assignment 4</string>
    <string name="login_title">Login</string>
    <string name="register_title">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="delete">Delete</string>
    <string name="empty_fields">All fields are required!</string>
    <string name="password_reset_email_sent">Password reset email sent!</string>
    <string name="enter_email">Enter your email address</string>
    <string name="enter_password">Enter your password</string>
</resources>